# B2STAGE-GridFTP

./: .gitignore  CMakeLists.txt  ChangeLog.txt  Makefile  README  README.cmake  README.md  globus_gridftp_server_iRODS.c  gridmap_iRODS_callout.c  libirodsmap.c  makefile_header  pid_manager.c  setup.sh.template
DSI/: globus_gridftp_server_iRODS.c  gridmap_iRODS_callout.c  gridmap_iRODS_callout.conf.in  libirodsmap.c  libirodsmap.h  pid_manager.c  pid_manager.h  pid_manager_test.c  testirodsmap.c
